--- a/biapp/sugar/index.html
+++ b/biapp/sugar/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
-<iframe width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" frameborder="0" allowFullScreen="true"></iframe>
+
 <body>
     <div class="wide" align="center">
-        <iframe id="frame1"  width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
+        <iframe id="frame1"  width="1320" height="790" src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
+            width="1700" height="800"
             frameborder="0" 
             allowFullScreen="true">
         </iframe>
     </div>
   
     <div class="monitor" align="center">
-        <iframe id="frame2" src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
+        <iframe id="frame2"  src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
+        width="1320" height="790"
         frameborder="0" 
         allowFullScreen="true">
     </iframe>
@@ -25,15 +27,17 @@
   
     <div class="tablet" align="center">
         <iframe id="frame3" src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
+        width="820 " height="1024"
         frameborder="0" 
         allowFullScreen="true">
     </iframe>
     </div>
   
     <div class="mobile" align="center">
-        <iframe id="frame4" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=f5353e9a-df38-4602-8120-80e059d860d1&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd"
-         frameborder="0"
-          allowFullScreen="true"></iframe>
+        <iframe id="frame4" src="https://app.powerbi.com/reportEmbed?reportId=f5353e9a-df38-4602-8120-80e059d860d1&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd"
+            width="376" height="1024"
+            frameborder="0"
+            allowFullScreen="true"></iframe>
     </div>
 
     <table class="tableFooter">
