--- a/biapp/sugar/index.html
+++ b/biapp/sugar/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="wide" align="center">
-        <iframe id="frame1"  width="1320" height="790" src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
+        <iframe id="frame1" src="https://app.powerbi.com/reportEmbed?reportId=fe286cb2-3046-4a8d-af7d-40f6f017893a&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
             width="1700" height="800"
             frameborder="0" 
             allowFullScreen="true">
