--- a/biapp/sugar/index.html
+++ b/biapp/sugar/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="wide" align="center">
-        <iframe id="frame1" <iframe width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=3da5543f-5b85-4aac-b56d-fe7e37d67aaa&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
+        <iframe id="frame1" src="https://app.powerbi.com/reportEmbed?reportId=3da5543f-5b85-4aac-b56d-fe7e37d67aaa&autoAuth=true&ctid=635d61c7-0e25-4953-a017-5fe70e21d5cd" 
             width="1700" height="800"
             frameborder="0" 
             allowFullScreen="true">
