--- a/biapp/sugar/index.html
+++ b/biapp/sugar/index.html
@@ -43,9 +43,9 @@
     <table class="tableFooter">
         <tbody><tr>
             <td class="pie">
-                <span class="nameCompany">Cepobia S.A.S.© Todos los derechos reservados </span> <br\>
-                   Hacemos que tus datos hablen <br\>
-                   <strong>Quieres tener acceso contactanos o </strong>  <a href="">suscribete directamente</a>
+                <span class="nameCompany">Cepobia S.A.S.© Todos los derechos reservados </span> <br>
+                   Hacemos que tus datos hablen <br>
+                   <strong>Quieres tener acceso contactanos o </strong>  <a href="">suscribete directamente</a> <br>
                    <a href="https://api.whatsapp.com/send?phone=573183883145&text=Hola,%20quiero%20conocer%20mas%20sobre%20sus%20servicios"class="pie">whatsapp. +57 318 388 3145</a> <a href="mailto:cepobia@cepobia.com" class="pie">cepobia@cepobia.com</a>
             </td>
         </tr>
